--- a/debian/po/dz.po
+++ b/debian/po/dz.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dz\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2007-12-23 22:48+0000\n"
+"POT-Creation-Date: 2008-01-26 07:32+0000\n"
 "PO-Revision-Date: 2007-03-13 02:16+0530\n"
 "Last-Translator: translator <pemai_jurmey@hotmail.com>\n"
 "Language-Team: Dzongkha <pgeyleg@dit.gov.bt>\n"
@@ -30,42 +30,52 @@ msgstr ""
 #. Description
 #. Main menu item
 #. :sl1:
-#: ../nobootloader.templates:5
+#: ../nobootloader.templates:1001
 msgid "Continue without boot loader"
 msgstr "བུཊི་མངོན་གསལ་པ་མེདཔ་སྦེ་འཕྲོ་མཐུད།"
 
 #. Type: error
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:10
+#: ../nobootloader.templates:2001
 msgid "Failed to mount /target/proc"
 msgstr " /target/proc སྦྱར་བརྩེགས་འབད་ནི་ལུ་འཐུས་ཤོར་བྱུང་ཡོད།"
 
 #. Type: error
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:10
+#: ../nobootloader.templates:2001
 msgid "Mounting the proc file system on /target/proc failed."
 msgstr " /target/proc ལུ་ proc ཡིག་སྣོད་རིམ་ལུགས་སྦྱར་བརྩེགས་འབད་ནི་ལུ་འཐུས་ཤོར་བྱུང་ཡོ"
 
 #. Type: error
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:10
+#: ../nobootloader.templates:2001
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
 msgstr "/var/log/syslog ཞིབ་དཔྱད་འབད་ཡང་ན་རྒྱས་བཤད་ཀྱི་དོན་ལུ་བར་ཅུ་ཡལ་མ་སྒྲོམ་༤་པ་འདི་བལྟ།"
 
 #. Type: error
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:10
+#: ../nobootloader.templates:2001
 msgid "Warning: Your system may be unbootable!"
 msgstr "ཉེན་བརྡ་:ཁྱོད་ཀྱི་རིམ་ལུགས་བུཊི་འབད་མི་བཏུབ་འོང་!"
 
 #. Type: note
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:21
+#. Type: note
+#. Description
+#. :sl4:
+#: ../nobootloader.templates:3001 ../nobootloader.templates:4001
+msgid "Setting firmware variables for automatic boot"
+msgstr "རང་བཞིན་གྱིས་བུཊི་འབད་ནིའི་དོན་ལུ་ཚོང་ལས་ཁང་གི་ཅ་ཆས་འགྱུར་ཅན་ཚུ་གཞི་སྒྲིག་འབད་དོ།"
+
+#. Type: note
+#. Description
+#. :sl4:
+#: ../nobootloader.templates:3001
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
@@ -79,7 +89,21 @@ msgstr ""
 #. Type: note
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:21
+#. Type: note
+#. Description
+#. :sl4:
+#: ../nobootloader.templates:3001 ../nobootloader.templates:4001
+msgid ""
+"You will only need to do this once.  Afterwards, enter the \"boot\" command "
+"or reboot the system to proceed to your newly installed system."
+msgstr ""
+"འ་ནི་འདི་ཁྱོད་ཀྱིས་ཚར་གཅིག་རྐྱངམ་ཅིག་འབད་དགོ། ཤུལ་ལས་ \"boot\"བརྡ་བཀོད་བཙུགས་ ཡང་ན་ ཁྱོད་ཀྱི་རིམ་"
+"ལུགས་གསརཔ་གཞི་བཙུགས་འབད་ཡོད་མི་ལུ་འགྱོ་ནིའི་དོན་ལུ་ རིམ་ལུགས་དེ་ རི་བུཊི་འབད།"
+
+#. Type: note
+#. Description
+#. :sl4:
+#: ../nobootloader.templates:3001
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
@@ -90,14 +114,7 @@ msgstr ""
 #. Type: note
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:44
-msgid "Setting firmware variables for automatic boot"
-msgstr "རང་བཞིན་གྱིས་བུཊི་འབད་ནིའི་དོན་ལུ་ཚོང་ལས་ཁང་གི་ཅ་ཆས་འགྱུར་ཅན་ཚུ་གཞི་སྒྲིག་འབད་དོ།"
-
-#. Type: note
-#. Description
-#. :sl4:
-#: ../nobootloader.templates:44
+#: ../nobootloader.templates:4001
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -114,25 +131,14 @@ msgstr ""
 #. Type: note
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:44
-msgid ""
-"You will only need to do this once.  Afterwards, enter the \"boot\" command "
-"or reboot the system to proceed to your newly installed system."
-msgstr ""
-"འ་ནི་འདི་ཁྱོད་ཀྱིས་ཚར་གཅིག་རྐྱངམ་ཅིག་འབད་དགོ། ཤུལ་ལས་ \"boot\"བརྡ་བཀོད་བཙུགས་ ཡང་ན་ ཁྱོད་ཀྱི་རིམ་"
-"ལུགས་གསརཔ་གཞི་བཙུགས་འབད་ཡོད་མི་ལུ་འགྱོ་ནིའི་དོན་ལུ་ རིམ་ལུགས་དེ་ རི་བུཊི་འབད།"
-
-#. Type: note
-#. Description
-#. :sl4:
-#: ../nobootloader.templates:65
+#: ../nobootloader.templates:5001
 msgid "No boot loader installed"
 msgstr "བུཊི་མངོན་གསལ་པ་གཞི་བཙུགས་མ་འབད་བས།"
 
 #. Type: note
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:65
+#: ../nobootloader.templates:5001
 msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
@@ -143,7 +149,7 @@ msgstr ""
 #. Type: note
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:65
+#: ../nobootloader.templates:5001
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
