--- a/debian/po/ml.po
+++ b/debian/po/ml.po
@@ -16,7 +16,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Debian Installer Level 1\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2007-12-23 22:48+0000\n"
+"POT-Creation-Date: 2008-01-26 07:32+0000\n"
 "PO-Revision-Date: 2007-12-15 06:25-0800\n"
 "Last-Translator: Praveen|പ്രവീണ്‍ A|എ <pravi.a@gmail.com>\n"
 "Language-Team: Swathanthra|സ്വതന്ത്ര Malayalam|മലയാളം Computing|കമ്പ്യൂട്ടിങ്ങ് <smc-"
@@ -31,42 +31,52 @@ msgstr ""
 #. Description
 #. Main menu item
 #. :sl1:
-#: ../nobootloader.templates:5
+#: ../nobootloader.templates:1001
 msgid "Continue without boot loader"
 msgstr "ബൂട്ട് ലോഡര്‍ ഇല്ലാതെ തുടരുക"
 
 #. Type: error
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:10
+#: ../nobootloader.templates:2001
 msgid "Failed to mount /target/proc"
 msgstr "/target/proc മൌണ്ട് ചെയ്യുന്നതില്‍ പരാജയപ്പെട്ടു"
 
 #. Type: error
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:10
+#: ../nobootloader.templates:2001
 msgid "Mounting the proc file system on /target/proc failed."
 msgstr "proc ഫയല്‍ സിസ്റ്റം /target/proc ല്‍ മൌണ്ട് ചെയ്യുന്നതില്‍ പരാജയപ്പെട്ടു."
 
 #. Type: error
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:10
+#: ../nobootloader.templates:2001
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
 msgstr "വിവരങ്ങള്‍ക്കായി /var/log/syslog പരിശോധിക്കുക അല്ലെങ്കില്‍ വിര്‍ച്വല്‍ കണ്‍സോള്‍ 4 കാണുക."
 
 #. Type: error
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:10
+#: ../nobootloader.templates:2001
 msgid "Warning: Your system may be unbootable!"
 msgstr "മുന്നറിയിപ്പ്: നിങ്ങളുടെ സിസ്റ്റം ബൂട്ട് ചെയ്യാന്‍ പറ്റാതായിട്ടുണ്ടാകാം!"
 
 #. Type: note
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:21
+#. Type: note
+#. Description
+#. :sl4:
+#: ../nobootloader.templates:3001 ../nobootloader.templates:4001
+msgid "Setting firmware variables for automatic boot"
+msgstr "സ്വയം ബൂട്ട് ചെയ്യുന്നതിന് ഫേംവെയര്‍ വാരിയബിള്‍സ് സെറ്റ് ചെയ്തു കൊണ്ടിരിയ്ക്കുന്നു"
+
+#. Type: note
+#. Description
+#. :sl4:
+#: ../nobootloader.templates:3001
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
@@ -80,7 +90,21 @@ msgstr ""
 #. Type: note
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:21
+#. Type: note
+#. Description
+#. :sl4:
+#: ../nobootloader.templates:3001 ../nobootloader.templates:4001
+msgid ""
+"You will only need to do this once.  Afterwards, enter the \"boot\" command "
+"or reboot the system to proceed to your newly installed system."
+msgstr ""
+"നിങ്ങള്‍ക്കിത് ഒരു തവണയേ ചെയ്യേണ്ടി വരൂ. അതിനു ശേഷം \"boot\" കമാന്‍ഡ് നല്‍കുക അല്ലെങ്കില്‍ "
+"നിങ്ങളുടെ പുതുതായി ഇന്‍സ്റ്റാള്‍ ചെയ്ത സിസ്റ്റത്തിലേക്ക് പോകാനായി റീബൂട്ട് ചെയ്യുക."
+
+#. Type: note
+#. Description
+#. :sl4:
+#: ../nobootloader.templates:3001
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
@@ -90,14 +114,7 @@ msgstr ""
 #. Type: note
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:44
-msgid "Setting firmware variables for automatic boot"
-msgstr "സ്വയം ബൂട്ട് ചെയ്യുന്നതിന് ഫേംവെയര്‍ വാരിയബിള്‍സ് സെറ്റ് ചെയ്തു കൊണ്ടിരിയ്ക്കുന്നു"
-
-#. Type: note
-#. Description
-#. :sl4:
-#: ../nobootloader.templates:44
+#: ../nobootloader.templates:4001
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -114,25 +131,14 @@ msgstr ""
 #. Type: note
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:44
-msgid ""
-"You will only need to do this once.  Afterwards, enter the \"boot\" command "
-"or reboot the system to proceed to your newly installed system."
-msgstr ""
-"നിങ്ങള്‍ക്കിത് ഒരു തവണയേ ചെയ്യേണ്ടി വരൂ. അതിനു ശേഷം \"boot\" കമാന്‍ഡ് നല്‍കുക അല്ലെങ്കില്‍ "
-"നിങ്ങളുടെ പുതുതായി ഇന്‍സ്റ്റാള്‍ ചെയ്ത സിസ്റ്റത്തിലേക്ക് പോകാനായി റീബൂട്ട് ചെയ്യുക."
-
-#. Type: note
-#. Description
-#. :sl4:
-#: ../nobootloader.templates:65
+#: ../nobootloader.templates:5001
 msgid "No boot loader installed"
 msgstr "ഒരു ബൂട്ട് ലോഡറും ഇന്‍സ്റ്റാള്‍ ചെയ്തില്ല"
 
 #. Type: note
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:65
+#: ../nobootloader.templates:5001
 msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
@@ -143,7 +149,7 @@ msgstr ""
 #. Type: note
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:65
+#: ../nobootloader.templates:5001
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
