--- a/debian/po/tr.po
+++ b/debian/po/tr.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2007-12-23 22:48+0000\n"
+"POT-Creation-Date: 2008-01-26 07:32+0000\n"
 "PO-Revision-Date: 2007-02-18 18:54+0200\n"
 "Last-Translator: Recai Oktaş <roktas@omu.edu.tr>\n"
 "Language-Team: Debian L10n Turkish <debian-l10n-turkish@lists.debian.org>\n"
@@ -30,28 +30,28 @@ msgstr ""
 #. Description
 #. Main menu item
 #. :sl1:
-#: ../nobootloader.templates:5
+#: ../nobootloader.templates:1001
 msgid "Continue without boot loader"
 msgstr "Önyükleyicisiz devam et"
 
 #. Type: error
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:10
+#: ../nobootloader.templates:2001
 msgid "Failed to mount /target/proc"
 msgstr "/target/proc bağlanması başarısız"
 
 #. Type: error
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:10
+#: ../nobootloader.templates:2001
 msgid "Mounting the proc file system on /target/proc failed."
 msgstr "/target/proc üzerine proc dosya sistemi bağlanması başarısız."
 
 #. Type: error
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:10
+#: ../nobootloader.templates:2001
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
 msgstr ""
 "Ayrıntılı bilgi için /var/log/syslog dosyasına veya dördüncü konsola bakın."
@@ -59,14 +59,24 @@ msgstr ""
 #. Type: error
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:10
+#: ../nobootloader.templates:2001
 msgid "Warning: Your system may be unbootable!"
 msgstr "Uyarı: Sisteminiz açılamaz duruma gelebilir!"
 
 #. Type: note
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:21
+#. Type: note
+#. Description
+#. :sl4:
+#: ../nobootloader.templates:3001 ../nobootloader.templates:4001
+msgid "Setting firmware variables for automatic boot"
+msgstr "Otomatik önyükleme için aygıt yazılımındaki değişkenler ayarlanıyor"
+
+#. Type: note
+#. Description
+#. :sl4:
+#: ../nobootloader.templates:3001
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
@@ -81,7 +91,22 @@ msgstr ""
 #. Type: note
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:21
+#. Type: note
+#. Description
+#. :sl4:
+#: ../nobootloader.templates:3001 ../nobootloader.templates:4001
+msgid ""
+"You will only need to do this once.  Afterwards, enter the \"boot\" command "
+"or reboot the system to proceed to your newly installed system."
+msgstr ""
+"Bu işlemi sadece bir kere yapmanız gerekiyor.  Sonraki durumlarda \"boot\" "
+"komutunu girin veya yeni kurulu sisteminizle devam etmek için sistemi "
+"yeniden başlatın."
+
+#. Type: note
+#. Description
+#. :sl4:
+#: ../nobootloader.templates:3001
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
@@ -92,14 +117,7 @@ msgstr ""
 #. Type: note
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:44
-msgid "Setting firmware variables for automatic boot"
-msgstr "Otomatik önyükleme için aygıt yazılımındaki değişkenler ayarlanıyor"
-
-#. Type: note
-#. Description
-#. :sl4:
-#: ../nobootloader.templates:44
+#: ../nobootloader.templates:4001
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -117,26 +135,14 @@ msgstr ""
 #. Type: note
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:44
-msgid ""
-"You will only need to do this once.  Afterwards, enter the \"boot\" command "
-"or reboot the system to proceed to your newly installed system."
-msgstr ""
-"Bu işlemi sadece bir kere yapmanız gerekiyor.  Sonraki durumlarda \"boot\" "
-"komutunu girin veya yeni kurulu sisteminizle devam etmek için sistemi "
-"yeniden başlatın."
-
-#. Type: note
-#. Description
-#. :sl4:
-#: ../nobootloader.templates:65
+#: ../nobootloader.templates:5001
 msgid "No boot loader installed"
 msgstr "Herhangi bir önyükleyici kurulu değil"
 
 #. Type: note
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:65
+#: ../nobootloader.templates:5001
 msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
@@ -147,7 +153,7 @@ msgstr ""
 #. Type: note
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:65
+#: ../nobootloader.templates:5001
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
