--- a/debian/po/be.po
+++ b/debian/po/be.po
@@ -19,7 +19,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: be\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2007-12-23 22:48+0000\n"
+"POT-Creation-Date: 2008-01-26 07:32+0000\n"
 "PO-Revision-Date: 2007-10-15 11:16+0100\n"
 "Last-Translator: Hleb Rubanau <g.rubanau@gmail.com>\n"
 "Language-Team: Belarusian <i18n@mova.org>\n"
@@ -32,21 +32,21 @@ msgstr ""
 #. Description
 #. Main menu item
 #. :sl1:
-#: ../nobootloader.templates:5
+#: ../nobootloader.templates:1001
 msgid "Continue without boot loader"
 msgstr "Працягваць без загрузчыка"
 
 #. Type: error
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:10
+#: ../nobootloader.templates:2001
 msgid "Failed to mount /target/proc"
 msgstr "Не атрымалася прымацаваць /target/proc"
 
 #. Type: error
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:10
+#: ../nobootloader.templates:2001
 msgid "Mounting the proc file system on /target/proc failed."
 msgstr ""
 "Не атрымалася прымацаваць файлавую сістэму proc да пункта /target/proc."
@@ -54,21 +54,31 @@ msgstr ""
 #. Type: error
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:10
+#: ../nobootloader.templates:2001
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
 msgstr "Падрабязнасці чытайце ў /var/log/syslog і на віртуальнай кансолі 4."
 
 #. Type: error
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:10
+#: ../nobootloader.templates:2001
 msgid "Warning: Your system may be unbootable!"
 msgstr "Увага: Вашая сістэма можа быць няздольная да загрузкі!"
 
 #. Type: note
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:21
+#. Type: note
+#. Description
+#. :sl4:
+#: ../nobootloader.templates:3001 ../nobootloader.templates:4001
+msgid "Setting firmware variables for automatic boot"
+msgstr "Прызначэнне параметраў прашыўкі для аўтаматычнай загрузкі"
+
+#. Type: note
+#. Description
+#. :sl4:
+#: ../nobootloader.templates:3001
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
@@ -83,7 +93,21 @@ msgstr ""
 #. Type: note
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:21
+#. Type: note
+#. Description
+#. :sl4:
+#: ../nobootloader.templates:3001 ../nobootloader.templates:4001
+msgid ""
+"You will only need to do this once.  Afterwards, enter the \"boot\" command "
+"or reboot the system to proceed to your newly installed system."
+msgstr ""
+"Вам трэба зрабіць гэта толькі аднойчы. Потым увядзіце каманду \"boot\" або "
+"перазагрузіце станцыю, каб пачаць працу з новай сістэмай. "
+
+#. Type: note
+#. Description
+#. :sl4:
+#: ../nobootloader.templates:3001
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
@@ -94,14 +118,7 @@ msgstr ""
 #. Type: note
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:44
-msgid "Setting firmware variables for automatic boot"
-msgstr "Прызначэнне параметраў прашыўкі для аўтаматычнай загрузкі"
-
-#. Type: note
-#. Description
-#. :sl4:
-#: ../nobootloader.templates:44
+#: ../nobootloader.templates:4001
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -118,25 +135,14 @@ msgstr ""
 #. Type: note
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:44
-msgid ""
-"You will only need to do this once.  Afterwards, enter the \"boot\" command "
-"or reboot the system to proceed to your newly installed system."
-msgstr ""
-"Вам трэба зрабіць гэта толькі аднойчы. Потым увядзіце каманду \"boot\" або "
-"перазагрузіце станцыю, каб пачаць працу з новай сістэмай. "
-
-#. Type: note
-#. Description
-#. :sl4:
-#: ../nobootloader.templates:65
+#: ../nobootloader.templates:5001
 msgid "No boot loader installed"
 msgstr "Не ўсталявана ніякага загрузчыка"
 
 #. Type: note
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:65
+#: ../nobootloader.templates:5001
 msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
@@ -147,7 +153,7 @@ msgstr ""
 #. Type: note
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:65
+#: ../nobootloader.templates:5001
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
