--- a/debian/po/nl.po
+++ b/debian/po/nl.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nl\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2007-12-23 22:48+0000\n"
+"POT-Creation-Date: 2008-01-26 07:32+0000\n"
 "PO-Revision-Date: 2007-02-13 22:27+0100\n"
 "Last-Translator: Bart Cornelis <cobaco@linux.be>\n"
 "Language-Team: Dutch <debian-l10n-dutch@lists.debian.org>\n"
@@ -26,28 +26,28 @@ msgstr ""
 #. Description
 #. Main menu item
 #. :sl1:
-#: ../nobootloader.templates:5
+#: ../nobootloader.templates:1001
 msgid "Continue without boot loader"
 msgstr "Verder gaan zonder opstartlader"
 
 #. Type: error
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:10
+#: ../nobootloader.templates:2001
 msgid "Failed to mount /target/proc"
 msgstr "Aankoppelen van /target/proc is mislukt"
 
 #. Type: error
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:10
+#: ../nobootloader.templates:2001
 msgid "Mounting the proc file system on /target/proc failed."
 msgstr "Aankoppelen van het proc-bestandssysteem op /target/proc is mislukt."
 
 #. Type: error
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:10
+#: ../nobootloader.templates:2001
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
 msgstr ""
 "Controleer /var/log/syslog of kijk op de vierde virtuele console (VT4) voor "
@@ -56,14 +56,24 @@ msgstr ""
 #. Type: error
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:10
+#: ../nobootloader.templates:2001
 msgid "Warning: Your system may be unbootable!"
 msgstr "Waarschuwing: mogelijk is uw systeem niet opstartbaar!"
 
 #. Type: note
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:21
+#. Type: note
+#. Description
+#. :sl4:
+#: ../nobootloader.templates:3001 ../nobootloader.templates:4001
+msgid "Setting firmware variables for automatic boot"
+msgstr "Firmware-variabelen worden ingesteld voor automatisch opstarten"
+
+#. Type: note
+#. Description
+#. :sl4:
+#: ../nobootloader.templates:3001
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
@@ -79,7 +89,21 @@ msgstr ""
 #. Type: note
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:21
+#. Type: note
+#. Description
+#. :sl4:
+#: ../nobootloader.templates:3001 ../nobootloader.templates:4001
+msgid ""
+"You will only need to do this once.  Afterwards, enter the \"boot\" command "
+"or reboot the system to proceed to your newly installed system."
+msgstr ""
+"U hoeft dit slechts eenmalig te doen. Om uw nieuw geïnstalleerde systeem op "
+"te starten geeft u vervolgens het commando 'boot' of herstart u het systeem."
+
+#. Type: note
+#. Description
+#. :sl4:
+#: ../nobootloader.templates:3001
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
@@ -90,14 +114,7 @@ msgstr ""
 #. Type: note
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:44
-msgid "Setting firmware variables for automatic boot"
-msgstr "Firmware-variabelen worden ingesteld voor automatisch opstarten"
-
-#. Type: note
-#. Description
-#. :sl4:
-#: ../nobootloader.templates:44
+#: ../nobootloader.templates:4001
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -115,25 +132,14 @@ msgstr ""
 #. Type: note
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:44
-msgid ""
-"You will only need to do this once.  Afterwards, enter the \"boot\" command "
-"or reboot the system to proceed to your newly installed system."
-msgstr ""
-"U hoeft dit slechts eenmalig te doen. Om uw nieuw geïnstalleerde systeem op "
-"te starten geeft u vervolgens het commando 'boot' of herstart u het systeem."
-
-#. Type: note
-#. Description
-#. :sl4:
-#: ../nobootloader.templates:65
+#: ../nobootloader.templates:5001
 msgid "No boot loader installed"
 msgstr "Er is geen opstartlader geïnstalleerd"
 
 #. Type: note
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:65
+#: ../nobootloader.templates:5001
 msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
@@ -145,7 +151,7 @@ msgstr ""
 #. Type: note
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:65
+#: ../nobootloader.templates:5001
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
