--- a/debian/po/pt_BR.po
+++ b/debian/po/pt_BR.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2007-12-23 22:48+0000\n"
+"POT-Creation-Date: 2008-01-26 07:32+0000\n"
 "PO-Revision-Date: 2007-09-07 02:24-0300\n"
 "Last-Translator: Felipe Augusto van de Wiel (faw) <faw@debian.org>\n"
 "Language-Team: l10n portuguese <debian-l10n-portuguese@lists.debian.org>\n"
@@ -21,28 +21,28 @@ msgstr ""
 #. Description
 #. Main menu item
 #. :sl1:
-#: ../nobootloader.templates:5
+#: ../nobootloader.templates:1001
 msgid "Continue without boot loader"
 msgstr "Continuar sem carregador de inicialização"
 
 #. Type: error
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:10
+#: ../nobootloader.templates:2001
 msgid "Failed to mount /target/proc"
 msgstr "Falha ao montar /target/proc"
 
 #. Type: error
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:10
+#: ../nobootloader.templates:2001
 msgid "Mounting the proc file system on /target/proc failed."
 msgstr "A montagem do sistema de arquivos proc em /target/proc falhou."
 
 #. Type: error
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:10
+#: ../nobootloader.templates:2001
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
 msgstr ""
 "Confira o arquivo /var/log/syslog ou consulte o console 4 para maiores "
@@ -51,14 +51,24 @@ msgstr ""
 #. Type: error
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:10
+#: ../nobootloader.templates:2001
 msgid "Warning: Your system may be unbootable!"
 msgstr "Aviso: Seu sistema pode não ser capaz de ser iniciado!"
 
 #. Type: note
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:21
+#. Type: note
+#. Description
+#. :sl4:
+#: ../nobootloader.templates:3001 ../nobootloader.templates:4001
+msgid "Setting firmware variables for automatic boot"
+msgstr "Definindo variáveis de firmware para inicialização automática"
+
+#. Type: note
+#. Description
+#. :sl4:
+#: ../nobootloader.templates:3001
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
@@ -74,7 +84,22 @@ msgstr ""
 #. Type: note
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:21
+#. Type: note
+#. Description
+#. :sl4:
+#: ../nobootloader.templates:3001 ../nobootloader.templates:4001
+msgid ""
+"You will only need to do this once.  Afterwards, enter the \"boot\" command "
+"or reboot the system to proceed to your newly installed system."
+msgstr ""
+"Você precisará fazer isto somente uma única vez. Após fazê-lo, informe o "
+"comando \"boot\" ou reinicialize o sistema para prosseguir ao seu novo "
+"sistema instalado."
+
+#. Type: note
+#. Description
+#. :sl4:
+#: ../nobootloader.templates:3001
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
@@ -85,14 +110,7 @@ msgstr ""
 #. Type: note
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:44
-msgid "Setting firmware variables for automatic boot"
-msgstr "Definindo variáveis de firmware para inicialização automática"
-
-#. Type: note
-#. Description
-#. :sl4:
-#: ../nobootloader.templates:44
+#: ../nobootloader.templates:4001
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -110,26 +128,14 @@ msgstr ""
 #. Type: note
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:44
-msgid ""
-"You will only need to do this once.  Afterwards, enter the \"boot\" command "
-"or reboot the system to proceed to your newly installed system."
-msgstr ""
-"Você precisará fazer isto somente uma única vez. Após fazê-lo, informe o "
-"comando \"boot\" ou reinicialize o sistema para prosseguir ao seu novo "
-"sistema instalado."
-
-#. Type: note
-#. Description
-#. :sl4:
-#: ../nobootloader.templates:65
+#: ../nobootloader.templates:5001
 msgid "No boot loader installed"
 msgstr "Nenhum carregador de inicialização instalado"
 
 #. Type: note
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:65
+#: ../nobootloader.templates:5001
 msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
@@ -141,7 +147,7 @@ msgstr ""
 #. Type: note
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:65
+#: ../nobootloader.templates:5001
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
