--- a/debian/po/sq.po
+++ b/debian/po/sq.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
-"POT-Creation-Date: 2007-12-23 22:48+0000\n"
+"POT-Creation-Date: 2008-01-26 07:32+0000\n"
 "PO-Revision-Date: 2007-02-21 13:24+0100\n"
 "Last-Translator:  Elian Myftiu <elian.myftiu@gmail.com>\n"
 "Language-Team: Debian L10n Albanian <debian-l10n-albanian@lists.debian.org>\n"
@@ -25,42 +25,52 @@ msgstr ""
 #. Description
 #. Main menu item
 #. :sl1:
-#: ../nobootloader.templates:5
+#: ../nobootloader.templates:1001
 msgid "Continue without boot loader"
 msgstr "Vazhdo pa ngarkues nisjeje"
 
 #. Type: error
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:10
+#: ../nobootloader.templates:2001
 msgid "Failed to mount /target/proc"
 msgstr "Montimi i /target/proc dështoi"
 
 #. Type: error
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:10
+#: ../nobootloader.templates:2001
 msgid "Mounting the proc file system on /target/proc failed."
 msgstr "Montimi i filesistemit proc në /target/proc dështoi."
 
 #. Type: error
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:10
+#: ../nobootloader.templates:2001
 msgid "Check /var/log/syslog or see virtual console 4 for the details."
 msgstr "Kontrollo /var/log/syslog ose shiko konsolën virtuale 4 për hollësitë."
 
 #. Type: error
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:10
+#: ../nobootloader.templates:2001
 msgid "Warning: Your system may be unbootable!"
 msgstr "Kujdes: Sistemi yt mund të mos niset!"
 
 #. Type: note
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:21
+#. Type: note
+#. Description
+#. :sl4:
+#: ../nobootloader.templates:3001 ../nobootloader.templates:4001
+msgid "Setting firmware variables for automatic boot"
+msgstr "Duke caktuar të ndryshueshmet firmware për nisjen automatike"
+
+#. Type: note
+#. Description
+#. :sl4:
+#: ../nobootloader.templates:3001
 msgid ""
 "Some variables need to be set in the Genesi firmware in order for your "
 "system to boot automatically.  At the end of the installation, the system "
@@ -75,7 +85,21 @@ msgstr ""
 #. Type: note
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:21
+#. Type: note
+#. Description
+#. :sl4:
+#: ../nobootloader.templates:3001 ../nobootloader.templates:4001
+msgid ""
+"You will only need to do this once.  Afterwards, enter the \"boot\" command "
+"or reboot the system to proceed to your newly installed system."
+msgstr ""
+"Këtë duhet ta bësh vetëm një herë.  Më pas, shkruaj komandën \"boot\" ose "
+"rinis sistemin për të vazhduar me sistemin tënd të sapo instaluar."
+
+#. Type: note
+#. Description
+#. :sl4:
+#: ../nobootloader.templates:3001
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
@@ -86,14 +110,7 @@ msgstr ""
 #. Type: note
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:44
-msgid "Setting firmware variables for automatic boot"
-msgstr "Duke caktuar të ndryshueshmet firmware për nisjen automatike"
-
-#. Type: note
-#. Description
-#. :sl4:
-#: ../nobootloader.templates:44
+#: ../nobootloader.templates:4001
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -111,25 +128,14 @@ msgstr ""
 #. Type: note
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:44
-msgid ""
-"You will only need to do this once.  Afterwards, enter the \"boot\" command "
-"or reboot the system to proceed to your newly installed system."
-msgstr ""
-"Këtë duhet ta bësh vetëm një herë.  Më pas, shkruaj komandën \"boot\" ose "
-"rinis sistemin për të vazhduar me sistemin tënd të sapo instaluar."
-
-#. Type: note
-#. Description
-#. :sl4:
-#: ../nobootloader.templates:65
+#: ../nobootloader.templates:5001
 msgid "No boot loader installed"
 msgstr "Asnjë ngarkues nisjeje i instaluar"
 
 #. Type: note
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:65
+#: ../nobootloader.templates:5001
 msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
@@ -140,7 +146,7 @@ msgstr ""
 #. Type: note
 #. Description
 #. :sl4:
-#: ../nobootloader.templates:65
+#: ../nobootloader.templates:5001
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
